securityconfig changed